--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
@@ -1,1 +1,57 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Sharing an imported CVS project</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1>Sharing an imported CVS project</H1><P CLASS="Para">It is possible to import a CVS project checked out using another CVS tool into Eclipse. Although the project already contains the CVS sharing information in the CVS folders, it still needs to be shared within Eclipse in order to enable the CVS Team menu operations.</P><P>To share an imported CVS project:</P><ol>  <li>In the Navigator view, select the project to be shared.</li>  <li>Select <b>Team &gt;</b> <b>Share Project...</b> from the project's     pop-up menu. The Share Project wizard opens.</li>  <li>From the list of available repository providers, choose <b>CVS</b> and click     <b>Next </b>to go to the next page. <b>Note</b>: If there is only one repository     provider available, the first page will be skipped and next page will be displayed     automatically.</li>  <li>The next page displays the sharing information stored in the CVS folder     of the project. Click Finish to share the project and enable the CVS Team     menu operations.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-117.htm">Sharing a new project using CVS</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Project checked out with another CVS tool</title>
+<meta name="keyword" content="team">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Project checked out with another CVS tool</H1>
+
+<P CLASS="Para">It is possible to use a CVS project checked out using another 
+  CVS tool into Eclipse. A common concern for those migrating to Eclipse is that 
+  they already <br>
+  + have their CVS project checked out on their local machine. You <em>don't</em> 
+  have to check out the contents again to create a project in Eclipse. Although 
+  the project already contains the CVS sharing information in the CVS folders, 
+  it still needs to be shared within Eclipse in order to enable the CVS Team menu 
+  operations.</P>
+
+<P>To share an CVS project that was already checked out:: </P>
+
+<ol>
+  <li>In the Navigator view, select the project to be shared.</li>
+  <li>Select <b>Team &gt;</b> <b>Share Project...</b> from the project's 
+    pop-up menu. The Share Project wizard opens.</li>
+  <li>From the list of available repository providers, choose <b>CVS</b> and click 
+    <b>Next </b>to go to the next page. <b>Note</b>: If there is only one repository 
+    provider available, the first page will be skipped and next page will be displayed 
+    automatically.</li>
+  <li>The next page displays the sharing information stored in the CVS folder 
+    of the project. Click Finish to share the project and enable the CVS Team 
+    menu operations.</li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-117.htm">Sharing a new project using CVS</a>
+</p>
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-47.htm">CVS</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
