*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tips/team_tips.htm
+++ b/bundles/org.eclipse.platform.doc.user/tips/team_tips.htm
@@ -64,11 +64,12 @@
   the CVS item via <strong>Other > CVS</strong>.</p>
 <h3 CLASS="Head">Synchronize view that contains many conflicts</h3>
 <p CLASS="Head">It can happen that a project is synchronized with a repository 
-  but somehow the CVS meta information was either deleted or not available (e.g. 
-  user ran cvs export from the command line). By default the synchronize view 
-  uses CVS revision numbers to calculate the sync state for files. However if 
-  the sync state is wrong or is not available you can revert to using file contents 
-  for calculating the sync state.</p>
+  but somehow the CVS meta information was either deleted or not available. For 
+  example, by running <strong>Team &gt; Disconnect</strong> and deleting the meta 
+  information then trying to shared the project again. By default the synchronize 
+  view uses CVS revision numbers to calculate the sync state for files. However 
+  if the sync state is wrong or is not available you can revert to using file 
+  contents for calculating the sync state.</p>
 <ol>
   <li>Your sync view contains many <em>false</em> conflicts (e.g. file that are 
     marked as conflicting but whose contents are actually the same).</li>
