*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -344,10 +344,17 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>More quick fixes</b></TD>
-    <TD vAlign=top width="70%">There are now quick fixes for additional Java problems: 
-      adding stubs for unimplemented methods; adding either a catch clause or 
-      a throws declaration to deal with an uncaught exception; removing a catch 
-      clause to deal with an exception no longer thrown.</TD>
+    <TD vAlign=top width="70%">
+      <p>There are now quick fixes for additional Java problems: adding stubs 
+        for unimplemented methods; adding either a catch clause or a throws declaration 
+        to deal with an uncaught exception; removing a catch clause to deal with 
+        an exception no longer thrown.</p>
+      <p>Click the light bulb in the left margin of the Java editor to get help 
+        with fixing compiler-detected problems, including: instance variable used 
+        in a static context; abstract method in a non-abstract type; unimplemented 
+        abstract methods; missing catch clauses for uncaught exceptions; non-visible 
+        method, field, type, or import.</p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -363,23 +370,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>More Quick Fixes</b></TD>
-    <TD vAlign=top width="70%">Click the light bulb in the left margin of the 
-      Java editor to get help with fixing compiler-detected problems, including: 
-      instance variable used in a static context; abstract method in a non-abstract 
-      type; unimplemented abstract methods; missing catch clauses for uncaught 
-      exceptions; non-visible method, field, type, or import.</TD>
-  </TR>	
-
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
     <TD vAlign=top align=left width="30%"><b>Code completion improvements</b></TD>
     <TD vAlign=top width="70%">
       <p>The Java compiler does a better job of rating the relevance of a proposal 
         based on the type expected in the context. For instance, for <code>StringBuffer 
-        sb= new [code assist]</code>, StringBuffer now shows up first on the list.</p>
+        sb= new [code assist]</code>, <code>StringBuffer</code> now shows up first 
+        on the list. Below is another example.</p>
       <img src="images/smart_code_assist.gif">
     </TD>
   </TR>		
@@ -412,10 +408,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Improved Java outline view</b></TD>
-    <TD vAlign=top width="70%">You can adjust the Java outline to show just the 
-      members of the compilation unit's main type by pressing the leftmost button 
-      <img src="images/gointo_toplevel_type.gif" width="16" height="16">(<b>Go 
-      Into Top Level Type</b>) in the Outline view toolbar.</TD>
+    <TD vAlign=top width="70%">
+      <p>You can adjust the Java outline to show just the members of the compilation 
+        unit's main type by pressing the <img src="images/gointo_toplevel_type.gif" width="16" height="16">button 
+        (<b>Go Into Top Level Type</b>) in the Outline view toolbar.</p>
+      <p><img src="images/go_into_top_level.gif" width="329" height="139"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -561,7 +559,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       UI</FONT></B> </P></TD>
     <TD vAlign=top width="70%">
       <P><FONT face=Verdana size=2>Activating any Java refactoring operation now 
-        pops up a small starting dialog to gather information needed to perform 
+        shows a small starting dialog to gather information needed to perform 
         the refactoring. Click <B>OK</B> to execute the refactoring without further 
         ado, or click <B>Preview</B> to see its effects before deciding whether 
         to go ahead.</FONT></P>
@@ -579,7 +577,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       (or when moving a type to a different package), the fully qualified name 
       of the element can now be updated in non-Java files as well.</FONT> 
       <P align=center><FONT face=Verdana size=2><IMG 
-      src="images/refactor.gif" border=0></FONT></P></TD></TR>
+      src="images/refactor.gif" ></FONT></P></TD></TR>
   <TR>
     <TD colSpan=2>
       <HR>
@@ -633,11 +631,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         declared in a class and choose <B>Refactor &gt; Push Down</B>. For each 
         of the methods and fields you can then choose if you want to either:</FONT></P>
       <UL>
-        <LI><FONT face=Verdana size=2>push it down to subclasses, or</FONT> 
-        <LI><FONT face=Verdana size=2>(in the case of methods) push it down to 
-        subclasses and declare an abstract method in the class that currently 
-        declares the method, or</FONT> 
-        <LI><FONT face=Verdana size=2>leave it as is</FONT> </LI></UL>
+        <LI><font face="Verdana" size="2">Push it down to subclasses, or</font> 
+        <LI><FONT face=Verdana size=2>(In the case of methods) push it down to 
+          subclasses and declare an abstract method in the class that currently 
+          declares the method, or</FONT> 
+        <LI><font face="Verdana" size="2">Leave it as is</font> </LI>
+      </UL>
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/push-down.gif" border=0> </FONT></P></TD></TR>
   <TR>
@@ -646,8 +645,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Inline Method</b></TD>
     <TD vAlign=top width="70%">
-      <p>Inlines calls to a particular Java method, either at a selected call 
-        site or everywhere a particular method is called</p>
+      <p>This refactoring inlines calls to a particular Java method, either at 
+        a selected call site or everywhere where the method is called.</p>
       <p><img src="images/inlineMethod.gif" width="408" height="229"></p>
     </TD>
   </TR>	
@@ -657,8 +656,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Inline Constant</b></TD>
     <TD vAlign=top width="70%">
-      <p>inlines uses of a particular Java static final field, either at a selected 
-        reference site or everywhere a particular field is referenced.</p>
+      <p>This refactoring inlines uses of a particular Java static final field, 
+        either at a selected reference site or everywhere where the field is referenced.</p>
       <p><img src="images/inlineConstant.gif" width="408" height="229"></p>
     </TD>
   </TR>	
@@ -668,9 +667,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Convert Local Variable to Field</b></TD>
     <TD vAlign=top width="70%">
-      <p>allows you to turn a local variable into a field. If the variable is 
-        initialized on creation, then the operation moves the initialization to 
-        the new field's declaration or to the class's constructors.</p>
+      <p>This refactoring allows you to turn a local variable into a field. If 
+        the variable is initialized on creation, then the operation moves the 
+        initialization to the new field's declaration or to the class's constructors.</p>
       <p><img src="images/convert_local_to_field.gif" width="447" height="425"></p>
     </TD>
   </TR>	
@@ -681,7 +680,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%"><b>Convert Anonymous Class to Nested 
       Class</b></TD>
     <TD vAlign=top width="70%">
-      <p>applies to the selected anonymous class declaration.</p>
+      <p>If an anonymus inner class in your code grow too large, this refactoring 
+        will help you convert it to a member class.</p>
       <p><img src="images/convert_anonymous_to_nested.gif" width="466" height="360"></p>
     </TD>
   </TR>	
@@ -692,9 +692,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%"><b>Convert Member Type to Top Level 
       Level Type</b></TD>
     <TD vAlign=top width="70%">
-      <p>Creates a new Java compilation unit for the selected inner class, updating 
-        all references as needed. For non-static inner classes, a field is added 
-        to allow access to the former enclosing instance.</p>
+      <p>This refactoring creates a new Java compilation unit for the selected 
+        member type, updating all references as needed. For non-static member 
+        types, a field is added to allow access to the former enclosing instance.</p>
       <p><img src="images/convert_member_type_to_top_level.gif" width="408" height="189"></p>
     </TD>
   </TR>
@@ -704,10 +704,10 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Change Method Signature</b></TD>
     <TD vAlign=top width="70%"> 
-      <p>lets you can change the signature of a method to add or remove parameters, 
-        or change parameter or return types. These changes are applied to the 
-        declaration of the method, anywhere the method is overridden or implemented, 
-        and anywhere it is called. </p>
+      <p>This refactoring lets you can change the signature of a method to add 
+        or remove parameters, or change parameter or return types. These changes 
+        are applied to the declaration of the method, anywhere the method is overridden 
+        or implemented, and anywhere it is called. </p>
       <p><img src="images/change_signature.gif" width="482" height="389"></p>
     </TD>
   </TR>		
@@ -717,9 +717,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Extract Constant</b></TD>
     <TD vAlign=top width="70%">
-      <p>Creates a static final field from the selected expression and substitutes 
-        a field reference, and optionally rewrites other places where the same 
-        expression occurs.</p>
+      <p>This refactoring creates a static final field from the selected expression 
+        and substitutes a field reference, and optionally rewrites other places 
+        where the same expression occurs.</p>
       <p><img src="images/extract_constant.gif" width="446" height="281"></p>
     </TD>
   </TR>	
@@ -729,9 +729,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Extract Interface</b></TD>
     <TD vAlign=top width="70%">
-      <p>Creates a new interface with a set of method and makes the selected class 
-        implement the interface, optionally changing references to the class to 
-        the new interface wherever possible.</p>
+      <p>This refactoring creates a new interface with a set of method and makes 
+        the selected class implement the interface, optionally changing references 
+        to the class to the new interface wherever possible.</p>
       <p><img src="images/extract_interface.gif" width="465" height="313"></p>
     </TD>
   </TR>	
@@ -741,7 +741,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Use Supertype Where Possible</b></TD>
     <TD vAlign=top width="70%">
-      <p>Replaces usages of a type with one of its supertypes</p>
+      <p>This refactoring replaces usages of a type with one of its supertype 
+        after identifying all places where such replacement is possible.</p>
       <p><img src="images/use_supertype.gif" width="408" height="258"></p>
     </TD>
   </TR>
@@ -776,7 +777,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P><B><FONT face=Verdana size=2>Run as JUnit Test</FONT></B> </P></TD>
+      <P><B><FONT face=Verdana size=2>Run as JUnit test</FONT></B> </P>
+    </TD>
     <TD width="70%"><FONT face=Verdana size=2>Select a JUnit test method in a 
       view and choose <B>Run &gt; Run As &gt; JUnit test</B>. This creates a 
       launch configuration to run the selected test.</FONT></TD></TR>
@@ -797,7 +799,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       associated with circular dependencies on the <B>Java / Compiler</B> 
       preference page.</FONT> 
       <P><FONT face=Verdana size=2><IMG 
-      src="images/cycle-warning.gif" border=0> </FONT></P></TD></TR>
+      src="images/cycle-warning.gif"> </FONT></P></TD></TR>
   <TR>
     <TD colSpan=2>
       <HR>
@@ -807,10 +809,10 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P align=right><B><FONT face=Verdana size=2>Compiler flags unused private 
       members</FONT></B> </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>The Java compiler can now warn of 
-      private method, field, or type declarations which aren't used. The setting 
+      private method, field, or type declarations which are not used. The setting 
       is on the <B>Java / Compiler</B> preference page.</FONT> 
       <P><FONT face=Verdana size=2><IMG 
-      src="images/warn-privates.gif" border=0></FONT></P></TD></TR>
+      src="images/warn-privates.gif"></FONT></P></TD></TR>
  <TR>
     <TD colSpan=2>
       <HR>
@@ -927,8 +929,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Automatic detection of 
-      installed JREs</FONT></B> </P></TD>
+      <P align=right><B><FONT face=Verdana size=2>Automatic detection of installed 
+        JREs on Mac OS X</FONT></B></P>
+    </TD>
     <TD width="70%"><FONT face=Verdana size=2>The Java IDE now automatically detects 
       all installed JREs and JDKs on Mac OS X, which means you no longer have 
       to create them manually. In addition, Eclipse will use the locally installed 
@@ -1019,12 +1022,11 @@ border=0></FONT></P></TD></TR>
     <TD vAlign=top align=left width="30%">
       <P align=right><B><FONT face=Verdana size=2>Customizable code 
       generation</FONT></B> </P></TD>
-    <TD width="70%"><FONT face=Verdana size=2>The <B>Java / Code 
-      Generation</B> preference page now allows you to customize generated code 
-      and comments in a similar way that normal templates are defined. These 
-      code templates are used whenever code is generated. (The comments replace 
-      the existing 'filecomment' and 'typecomment' templates used for code 
-      generation.)</FONT> 
+    <TD width="70%"><FONT face=Verdana size=2>The <B>Java / Code Generation</B> 
+      preference page allows you to customize generated code and comments in a 
+      similar way that normal templates are defined. These code templates are 
+      used whenever code is generated. (The comments replace the existing 'filecomment' 
+      and 'typecomment' templates used for code generation.)</FONT> 
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/code-templates.gif" border=0></FONT> </P></TD></TR>
   <TR>
