second cut, more

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -169,6 +169,21 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 			</td>
 		</tr>
 		<tr>
+			<td valign="top" align="right"><b>Surround lines</b></td>
+			<td valign="top" width="504">To surround statements with an if / while / for or other blocks, select the lines to surround and invoke <b>CTRL
+			+ 1 (Edit / Quick Fix)</b>. This lists all templates that contain the variable ${line_selection}<br>
+			Templates are configured on <b>Window / Preferences / Java / Editor /
+			Templates</b><br>
+			<img border="0" src="images/surroundwith.gif" width="547" height="99"><br></td>
+		</tr>
+		<tr>
+			<td valign="top" align="right"><b>Remove surrounding statement</b></td>
+			<td valign="top" width="504">To remove a surrounding statement or block position the cursor at the opening bracket at invoke <b>CTRL
+			+ 1 (Edit / Quick Fix)</b>.<br>
+			<img border="0" src="images/quick-assist-remove-surrounding.gif"
+				width="408" height="100"></td>
+		</tr>
+		<tr>
 			<td width="20%" valign="top" align="right"><b>Reminders in your Java
 			code</b></td>
 			<td valign="top" align="left" width="80%">When you tag a comment in
@@ -248,7 +263,8 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 				defined in 'List' and implemented in 'ArrayList' and 'Vector' but
 				not in 'AbstractList'</li>
 			</ul>
-			(screenshot: TH on List, isEmpty in lock)</td>
+			<img border="0" src="images/hierarchy-lockview.gif" width="407"
+				height="261"></td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Define prefixes or
@@ -301,8 +317,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 			<p><img border="0" src="images/warn-privates.gif" width="327"
 				height="349"><br>
 			All these settings are also detected as you type and a quick fix is
-			offered to remove the unneeded code.<br>
-			</p>
+			offered to remove the unneeded code.</p>
 			</td>
 		</tr>
 		<tr>
@@ -337,73 +352,6 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 			outline of the current source file.
 			<img border="0" src="images/inplace_outline.gif"
 				alt="Inplace Outline" width="365" height="291"></td>
-		</tr>
-
-
-
-		<tr>
-			<td width="20%" valign="top" align="right"><b>Refactoring can update
-			non-Java files</b></td>
-			<td valign="top" align="left" width="80%">When renaming a Java type
-			or package (or when moving a type to a different package), the fully
-			qualified name of the element can now be updated in non-Java files as
-			well.
-			<br>
-			<img border="0" src="images/refactor.gif" width="450" height="330"></td>
-		</tr>
-		<tr>
-			<td width="20%" valign="top" align="right"><b>Move instance method
-			refactoring</b></td>
-			<td valign="top" align="left" width="80%">You can select an instance
-			method and select <b>Move</b> from the context menu. It allows you to
-			move the method to the declared class of one of the method's
-			parameters, or to the declared class of a field. This creates a new
-			method and converts the old method into a delegate (passing it 'this'
-			if necessary).
-
-			<br>
-			<img border="0" src="images/move-method.gif" width="323" height="331"></td>
-		</tr>
-		<tr>
-			<td width="20%" valign="top" align="right"><b>Pull Up refactoring</b></td>
-			<td valign="top" align="left" width="80%">
-
-			<p>Use the Pull-Up refactoring to move methods and fields in the
-			declaring type's hierarchy.</p>
-
-			<ul>
-				<li>Members can be pulled up more than 1 level in the class
-				hierarchy.</li>
-				<li>Instead of pulling methods up you can choose to declare them
-				abstract in the destination class. This will add method stubs to all
-				non-abstract subclasses of the destination class if required.</li>
-				<li>By pressing <b>Add Required</b> you can compute the set of all
-				members that are required to be pulled up together with those
-				already selected.</li>
-				
-
-			</ul><img border="0" src="images/pull-up.gif" width="439" height="314">
-			</td>
-		</tr>
-		<tr>
-			<td width="20%" valign="top" align="right"><b>Push Down refactoring</b></td>
-			<td valign="top" align="left" width="80%">
-
-			<p>Select a set of non-static methods and fields declared in a class
-			and choose <b>Refactor / Push Down</b>. For each of the methods
-			and fields you can then choose if you want to either:</p>
-
-			<ul>
-				<li>push it down to subclasses, or</li>
-				<li>(in the case of methods) push it down to subclasses and declare
-				an abstract method in the class that currently declares the method,
-				or</li>
-				<li>leave it as is</li>
-
-			</ul>
-
-			<img border="0" src="images/push-down.gif" width="412" height="236">
-			</td>
 		</tr>
 
 	</tbody>
