*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-cvs-watch.htm
@@ -38,7 +38,7 @@
      
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks"
  width="159" height="27"> <a href="../tasks/tasks-cvs-watch.htm"><br>
-  Using CVS watches</a></p>
+  Finding out who's working on what: watch/edit</a></p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
 <br>
