--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
@@ -84,7 +84,7 @@
 <p>&nbsp;</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"> 
   <br>
-  <a href="../concepts/concepts-cvs-watch.htm">CVS Watches</a></p>
+  <a href="../concepts/concepts-cvs-watch.htm">Watch/Edit</a></p>
 <p><a href="../concepts/concepts-26.htm">Team programming with CVS</a> </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"> 
   <br>
