*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
@@ -390,7 +390,7 @@ all of the annotations shown in the user preferences.&nbsp; This includes
 annotations contributed by any plug-in and is not limited to the
 workbench-supplied annotations.&nbsp; If you do not wish to show all available
 annotations in your editor, you should override this method and set up the <a href="../reference/api/org/eclipse/ui/texteditor/SourceViewerDecorationSupport.html"><b>SourceViewerDecorationSupport</b></a><b>
-</b>with only those types you want to show.</p>
+</b>with only those types that you want to show.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
 
 </BODY>
