--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
@@ -63,7 +63,8 @@ preferable.</p>
  <a href="../tasks/tasks-100.htm">Creating a version of a project</a> <br>
  <a href="../tasks/tasks-118.htm">Versioning projects in the repository</a>
   <br>
- <a href="../tasks/tasks-107b.htm">Enabling the CVS resource decorations</a>
+ <a href="../tasks/tasks-107b.htm">Enabling the CVS resource decorations</a><BR>
+  <a href="../tasks/tasks-105c.htm">Moving tags</a><br>
   </p>
     
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference"
