--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
@@ -42,6 +42,9 @@
 <a href="tasks-115.htm">Synchronizing with the repository</a><br>
 <a href="tasks-114.htm">Committing</a>
 </p>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-19cvs.htm">CVS preference pages</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
